SET(ITEMS
    get_alarm_counter
    get_critical_error_counter
    get_laser_id
    get_laser_interface
    get_laser_model_info
    get_laser_software_info
    get_laser_status
    get_mode_parameter
    get_network_settings
    input_bean
    output_bean
    reset
    reset_critical_error
    set_command_timeout
    set_ee
    set_em
    set_frequency
    set_gl_mode
    set_ip_settings
    set_laser_interface
    set_mode_index
    set_power
    set_ps_mode
    get_air_cooled_laser_status
    )

FOREACH(ITEM ${ITEMS})
    IF (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${ITEM}.ui")
        SET(UI_FILES ${UI_FILES} "${CMAKE_CURRENT_SOURCE_DIR}/${ITEM}.ui")
    ENDIF(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${ITEM}.ui")

    IF (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${ITEM}.hpp")
        SET(HEADERS ${HEADERS} "${CMAKE_CURRENT_SOURCE_DIR}/${ITEM}.hpp")
    ENDIF(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${ITEM}.hpp")

    IF (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${ITEM}.cpp")
        SET(SOURCES ${SOURCES} "${CMAKE_CURRENT_SOURCE_DIR}/${ITEM}.cpp")
    ENDIF(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${ITEM}.cpp")

    IF (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${ITEM}.qrc")
        SET(QRC_FILES ${QRC_FILES} "${CMAKE_CURRENT_SOURCE_DIR}/${ITEM}.qrc")
    ENDIF(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${ITEM}.qrc")

    IF (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${ITEM}.qss")
        SET(QSS_FILES ${QSS_FILES} "${CMAKE_CURRENT_SOURCE_DIR}/${ITEM}.qss")
    ENDIF(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${ITEM}.qss")

ENDFOREACH(ITEM)

SET(PROJECT_SOURCES ${PROJECT_SOURCES} ${SOURCES} CACHE INTERNAL "")
SET(PROJECT_HEADERS ${PROJECT_HEADERS} ${HEADERS} CACHE INTERNAL "")
SET(PROJECT_UI_FILES ${PROJECT_UI_FILES} ${UI_FILES} CACHE INTERNAL "")
SET(PROJECT_QRC_FILES ${PROJECT_QRC_FILES} ${QRC_FILES} CACHE INTERNAL "")
SET(PROJECT_QSS_FILES ${PROJECT_QSS_FILES} ${QSS_FILES} CACHE INTERNAL "")

MESSAGE("${CMAKE_CURRENT_SOURCE_DIR}/PROJECT_SOURCES: ${PROJECT_SOURCES}")
MESSAGE("${CMAKE_CURRENT_SOURCE_DIR}/PROJECT_HEADERS: ${PROJECT_HEADERS}")
MESSAGE("${CMAKE_CURRENT_SOURCE_DIR}/PROJECT_UI_FILES: ${PROJECT_UI_FILES}")
MESSAGE("${CMAKE_CURRENT_SOURCE_DIR}/QRC_FILES: ${PROJECT_QRC_FILES}")
MESSAGE("${CMAKE_CURRENT_SOURCE_DIR}/QSS_FILES: ${PROJECT_QSS_FILES}")

SET(SUB_FOLDERS
)

FOREACH(item ${SUB_FOLDERS})
    MESSAGE("Folder: " ${item})
    INCLUDE_DIRECTORIES(${item})
    ADD_SUBDIRECTORY(${item})
ENDFOREACH(item)
